# catnip

./: .gitignore  CMakeLists.txt  README.md  default.nix  derivation.nix  shell.nix
include/: vertex.h
src/: CMakeLists.txt  catnip.c  vertex.c
test/: CMakeLists.txt  vertex_test.c
